5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1691_2471.log
== SUBMITION (2019-05-07 19:01:16) 
-- CODE:
idade = float(input("idade: "))
incide = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Medio")
else:
	print("Entradas: ",idade,"anos e IMC",indide)
	print("Dados invalidos")

-- EXECUTION TIME:
0.133355
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 17, in <module>
    print("Entradas: ",idade,"anos e IMC",indide)
NameError: name 'indide' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:02:38) 
-- CODE:
idade = float(input("idade: "))
incide = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Medio")
	else:
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Dados invalidos")
else:
	print("Entradas: ",idade,"anos e IMC",indide)
	print("Dados invalidos")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("Entradas: ",idade,"anos e IMC",indide)
NameError: name 'indide' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:03:02) 
-- CODE:
idade = float(input("idade: "))
indide = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Risco: Medio")
	else:
		print("Entradas: ",idade,"anos e IMC",indide)
		print("Dados invalidos")
else:
	print("Entradas: ",idade,"anos e IMC",indide)
	print("Dados invalidos")

-- EXECUTION TIME:
0.285653
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0.0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:

-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:03:24) 
-- CODE:
idade = float(input("idade: "))
indide = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas: ",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- EXECUTION TIME:
0.165655
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 20, in <module>
    print("Entradas: ",idade,"anos e IMC",indice)
NameError: name 'indice' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:03:32) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas: ",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- EXECUTION TIME:
0.200543
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0.0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25.0 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50.0 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:03:44) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas: ",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- OUTPUT:
Entradas:  0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:04:05) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas: ",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- EXECUTION TIME:
0.140963
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0.0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25.0 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50.0 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:04:06) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas: ",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas: ",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- OUTPUT:
Entradas:  0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:06:38) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- EXECUTION TIME:
0.133393
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25.0 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50.0 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:06:39) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- EXECUTION TIME:
0.151078
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25.0 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:06:39) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- EXECUTION TIME:
0.169088
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25.0 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50.0 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:06:39) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45 ):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:10:53) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:11:09) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")10
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 12
    print("Risco: Alto")10
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:11:11) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")10
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 12
    print("Risco: Alto")10
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:11:15) 
-- CODE:
idade = float(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0.0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:11:31) 
-- CODE:
idade = int(input("idade: "))
indice = float(input("IMC: "))
if(idade > 0 and indice > 0):
	if(indice < 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Baixo")
	elif(indice < 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	elif(indice >= 22 and idade >= 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Alto")
	elif(indice >= 22 and idade < 45):
		print("Entradas:",idade,"anos e IMC",indice)
		print("Risco: Medio")
	else:
		print("Entradas:",idade,"anos e IMC",indice)
		print("Dados invalidos")
else:
	print("Entradas:",idade,"anos e IMC",indice)
	print("Dados invalidos")

-- EXECUTION TIME:
0.125938
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
